--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 #avatar {
     width: 300px;
     border-radius: 50%;
-    border: solid #342e37 5px;
+    border: solid #4400ff 5px;
     background-color: #eeeeee;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
 }
@@ -38,13 +38,14 @@ body {
     font-size: 50px;
 }
 #bio {
-    color: #aaaaaa;
+    color: #dddddd;
     width: 100%;
     top: 65%;
     text-align: center;
     margin: 8px 0 0 0;
     font-size: 20px;
     font-weight: 600;
+    text-shadow: 0 0 4px rgb(0 0 0 / 40%);
 }
 #about {
     display: flex;
